# awful-app

./: Cargo.toml  README.md
src/: index.html  main.rs  ws.rs
