[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.11", features = ["ws"]}
const-random = "0.1.15"
futures-util = "0.3.27"
serde = {version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = {version = "1.3.0", features = ["v4"]}
